# jsons-to-schema

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  json-to-schema.cabal  jsons-to-schema.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Utils.hs
src/JSONSchema/: SchemaConverter.hs  SchemaGenerationConfig.hs  Unifiers.hs
src/JSONSchema/Draft4/: SchemaConfig.hs  SchemaGeneration.hs  SchemaGenerationConfig.hs  SchemaUnification.hs
src/JSONSchema/Draft4/Internal/: Utils.hs
test/: Main.hs  Spec.hs  TestUtils.hs  UtilsSpec.hs
test/JSONSchema/: ArrayTypeTests.hs  ArrayTypes.hs  BasicTypeTests.hs  BasicTypes.hs  ComplexTypeTests.hs  QuickCheckTests.hs  SchemaConverterSpec.hs  UnifiersSpec.hs
test/JSONSchema/Draft4/: ArrayTypeTests.hs  BasicTypeTests.hs  ComplexTypeTests.hs  QuickCheckInstances.hs  QuickCheckTests.hs  SchemaConverterSpec.hs  UnifiersSpec.hs
test/JSONSchema/SchemaConverter/: Tests.hs
