name:                json-to-schema
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/garetht/json-to-schema#readme
license:             BSD3
license-file:        LICENSE
author:              Gareth Tan
maintainer:          garethwtan@gmail.com
copyright:           2017 Gareth Tan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:
    OverloadedStrings
    NoImplicitPrelude
  exposed-modules:     Lib
                     , JSONSchema.SchemaConverter
  build-depends:       base >= 4.7 && < 5
                     , hjsonschema
                     , text
                     , bytestring
                     , semigroups
                     , aeson
                     , protolude
                     , aeson-pretty
                     , unordered-containers
                     , containers
                     , vector
  default-language:    Haskell2010

executable json-to-schema-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , json-to-schema
  default-language:    Haskell2010

test-suite json-to-schema-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , json-to-schema
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/garetht/json-to-schema
