name:                json-to-schema
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/garetht/json-to-schema#readme
license:             BSD3
license-file:        LICENSE
author:              Gareth Tan
maintainer:          garethwtan@gmail.com
copyright:           2017 Gareth Tan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:
    OverloadedStrings
    NoImplicitPrelude
  exposed-modules:     Lib
                     , JSONSchema.SchemaConverter
                     , JSONSchema.Unifiers
                     , JSONSchema.SchemaGenerationConfig
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , hjsonschema
                     , text
                     , bytestring
                     , semigroups
                     , aeson
                     , protolude
                     , aeson-pretty
                     , unordered-containers
                     , containers
                     , vector
                     , safe
                     , scientific
                     , QuickCheck
  default-language:    Haskell2010

executable json-to-schema-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , json-to-schema
                     , protolude
  default-language:    Haskell2010

test-suite json-to-schema-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       JSONSchema.SchemaConverterSpec
                     , JSONSchema.BasicTypeTests
                     , JSONSchema.ArrayTypeTests
                     , JSONSchema.ComplexTypeTests
                     , JSONSchema.QuickCheckTests
                     , JSONSchema.UnifiersSpec
                     , TestUtils
                     , UtilsSpec
  main-is:             Spec.hs
  default-extensions:
    OverloadedStrings
    NoImplicitPrelude
  build-depends:       base
                     , json-to-schema
                     , hspec
                     , scientific
                     , protolude
                     , neat-interpolation
                     , hjsonschema
                     , text
                     , bytestring
                     , aeson
                     , aeson-pretty
                     , QuickCheck
                     , quickcheck-instances
                     , containers
                     , unordered-containers
                     , uniplate
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/garetht/json-to-schema
