name:                jsons-to-schema
version:             0.1.0.0
synopsis:            JSON to JSON Schema
description:         A JSON Schema Draft 4 Generator from JSON Instances
homepage:            https://github.com/garetht/jsons-to-schema/README.md
license:             BSD3
license-file:        LICENSE
author:              Gareth Tan
maintainer:          garethwtan@gmail.com
copyright:           2017 Gareth Tan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options: -fwarn-missing-signatures -fwarn-incomplete-patterns -fwarn-unused-imports -fwarn-unused-binds -fwarn-name-shadowing
  default-extensions:
    OverloadedStrings
    NoImplicitPrelude
  exposed-modules:     JSONSchema.Draft4.SchemaGeneration
                     , JSONSchema.Draft4.SchemaUnification
                     , JSONSchema.Draft4.SchemaGenerationConfig
                     , JSONSchema.Draft4.Internal.Utils
  build-depends:       base >= 4.7 && < 5
                     , hjsonschema
                     , text
                     , bytestring
                     , semigroups
                     , aeson
                     , protolude
                     , aeson-pretty
                     , unordered-containers
                     , containers
                     , vector
                     , safe
                     , scientific
                     , QuickCheck
  default-language:    Haskell2010

executable jsons-to-schema-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns -fwarn-unused-imports -fwarn-unused-binds -fwarn-name-shadowing
  build-depends:       base
                     , jsons-to-schema
                     , protolude
                     , optparse-applicative
                     , Glob
                     , conduit
                     , conduit-combinators
                     , bytestring
                     , hjsonschema
  default-language:    Haskell2010

test-suite jsons-to-schema-test
  type:                exitcode-stdio-1.0
  ghc-options: -fwarn-missing-signatures -fwarn-incomplete-patterns -fwarn-unused-imports -fwarn-unused-binds -fwarn-name-shadowing
  hs-source-dirs:      test
  other-modules:       JSONSchema.Draft4.SchemaConverterSpec
                     , JSONSchema.Draft4.BasicTypeTests
                     , JSONSchema.Draft4.ArrayTypeTests
                     , JSONSchema.Draft4.ComplexTypeTests
                     , JSONSchema.Draft4.QuickCheckTests
                     , JSONSchema.Draft4.QuickCheckInstances
                     , JSONSchema.Draft4.UnifiersSpec
                     , TestUtils
                     , UtilsSpec
  main-is:             Spec.hs
  default-extensions:
    OverloadedStrings
    NoImplicitPrelude
  build-depends:       base
                     , jsons-to-schema
                     , hspec
                     , scientific
                     , protolude
                     , neat-interpolation
                     , hjsonschema
                     , text
                     , bytestring
                     , aeson
                     , aeson-pretty
                     , QuickCheck
                     , quickcheck-instances
                     , containers
                     , unordered-containers
                     , uniplate
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/garetht/jsons-to-schema
